--- a/HTML/biodata.html
+++ b/HTML/biodata.html
@@ -19,8 +19,9 @@
         </ul>
         <h2>Kontak saya</h2>
         <ul>
-            <li>email : tiaradwi013@gmai.com</li>
+            <li>email : tiaradwi013@gmail.com</li>
             <li>WA : 082316745108</li>
+            <li><a href="https://www.linkedin.com/in/tiara-dwi-meilinda-aisa-89487a223/">Linkedin</a></li>
         </ul>
 
     </body>
