--- a/HTML/biodata.html
+++ b/HTML/biodata.html
@@ -16,6 +16,7 @@
             <li>SDN 8 MIMBAAN</li>
             <li>SMPN 1 PANJI</li>
             <li>SMA 1 SITUBONDO</li>
+            <li>Universitas Jember</li>
         </ul>
         <h2>Kontak saya</h2>
         <ul>
