--- a/HTML/biodata.html
+++ b/HTML/biodata.html
@@ -9,13 +9,13 @@
         <ul>
             <li>UI/UX</li>
             <li>Microsoft Office</li>
-            <li>Mampu beradaptasi</li>
+            <li>Mampu beradaptasi </li>
         </ul>
         <h2><b>Pendidikan saya</b></h2>
         <ul>
             <li>SDN 8 MIMBAAN</li>
             <li>SMPN 1 PANJI</li>
-            <li>SMA 1 SITUBONDO</li>
+            <li>SMAN 1 SITUBONDO</li>
             <li>Universitas Jember</li>
         </ul>
         <h2>Kontak saya</h2>
