add table and form

--- a/tabel/tabel.html
+++ b/tabel/tabel.html
@@ -11,7 +11,7 @@
     <h1>Tabel Anggota Kelompok</h1> 
     <form>
         <p>Nama : </p>
-        <input type="text" name="nama">
+        <input type="text" name="nama" placeholder="enter your name">
         <p>Kelompok :</p>
         <input type="radio" name="kelompok" id="Bwi-Jember 1">
         <label for="Bwi-Jember 1">Bwi Bwi-Jember 1</label>
@@ -39,7 +39,7 @@
         <tr>
             <td>2</td>
             <td>Azima</td>
-            <td>Bwi Bwi-Jember 2</td>
+            <td>Bwi-Jember 2</td>
         </tr>
     </table>
 </body>
