add tabel and form

--- a/tabel/tabel.html
+++ b/tabel/tabel.html
@@ -13,10 +13,10 @@
         <p>Nama : </p>
         <input type="text" name="nama" placeholder="enter your name">
         <p>Kelompok :</p>
-        <input type="radio" name="kelompok" id="Bwi-Jember 1">
-        <label for="Bwi-Jember 1">Bwi Bwi-Jember 1</label>
-        <input type="radio" name="kelompok" id="Bwi-Jember 2">
-        <label for="Bwi-Jember 2">Bwi Bwi-Jember 2</label>
+        <input type="radio" name="kelompok" id="EXO">
+        <label for="EXO">EXO</label>
+        <input type="radio" name="kelompok" id="EXOL">
+        <label for="EXOL">EXOL</label>
     <div>
         <input type="submit" value="Submit">
         <input type="reset" value="reset">
@@ -34,12 +34,47 @@
         <tr>
             <td>1</td>
             <td>Tiara </td>
-            <td>Bwi-Jember 2</td>
+            <td>EXOL</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>Azima</td>
-            <td>Bwi-Jember 2</td>
+            <td>Xiumin</td>
+            <td>EXO</td>
+        <tr>
+            <td>3</td>
+            <td>Suho</td>
+            <td>EXO</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Baekhyun</td>
+            <td>EXO</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Chen</td>
+            <td>EXO</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>Chanyeol</td>
+            <td>EXO</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>D.O.</td>
+            <td>EXO</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>Kai</td>
+            <td>EXO</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>Sehun</td>
+            <td>EXO</td>
+        </tr>
         </tr>
     </table>
 </body>
