--- a/tabel/portofolio.html
+++ b/tabel/portofolio.html
@@ -23,6 +23,8 @@
         <input type="text" name="Pendidikan" placeholder="">
         <p>Kontak</p>
         <input type="text" name="Kontak" placeholder="">
+        <input type="text" name="Kontak" placeholder="">
+        <input type="text" name="Kontak" placeholder="">
         <br>
         <div>
             <br>
