--- a/tabel/biodata.html
+++ b/tabel/biodata.html
@@ -1,4 +1,22 @@
 <html>
+    <title>Biodata</title>
+    <style>
+        body {
+      background-color: #d7b3cb;
+      padding-top: 5px;
+      height: 100%;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    h1{
+        color: rgb(0, 0, 0);
+        font-family: Verdana;
+        font-size: 250%;
+    }    
+    img{
+        width: 250;
+        height: 400;
+    }
+    </style>
     <body>
         <h1>Tiara Dwi Meilinda Aisa</h1>
         <img src="abu.png" width ="100">
