--- a/tabel/portofolio.html
+++ b/tabel/portofolio.html
@@ -6,8 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio</title>
 </head>
+<style>
+    body {
+      background-color: #d7b3cb;
+      padding-top: 5px;
+      height: 100%;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    h1{
+        color: rgb(0, 0, 0);
+        font-family: Verdana;
+        font-size: 200%;
+    }
+    table,tr,th,td{
+        border: 3px solid black;
+        border-radius: 8px;
+        padding: 5px;
+    }
+    tabel{ 
+        border-collapse: collapse;
+        caption-side: top;
+    }
+    caption{
+        font-weight: bold;
+    }
+  </style>
 <body>
-    <h1 id="heading1">Form Portofolio</h1>
+    <h1 style="text-align: center;">Form Portofolio</h1>
     <form>
         <p>Nama</p>
         <input type="text" name="Nama" placeholder="">
@@ -34,7 +59,7 @@
         </div>
     </form>
     <br>
-    <table border="1">
+    <table>
         <tr> 
             <th>No</th> 
             <th>Foto</th>
@@ -47,7 +72,7 @@
         <tr>
             <td>1</td>
             <td><img src="abu.png" width ="100"></td>
-            <td>Tiara Dwi Meilinda Aisa</td>
+            <td> Tiara Dwi Meilinda Aisa</td>
             <td><br>Saya seorang mahasiswa Sistem Informasi di Universitas Jember yang tertarik dengan ilmu komputer,
                 Saya senang belajar hal baru dan memiliki kemampuan komunikasi yang baik</br></td>
             <td><ol>
