--- a/tabel/index.html
+++ b/tabel/index.html
@@ -13,14 +13,47 @@
         font-size: 250%;
     }    
     img{
-        width: 250;
-        height: 400;
+        width: 180;
+        height: 300;
     }
+    
+    .nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0px;
+        overflow: hidden;
+        background-color: #333;
+    }
+
+    .nav li {
+        float: left;
+    }
+
+    .nav li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+    .nav li a:hover {
+        background-color: #111;
+    }
+    
     </style>
+
     <body>
+        <div class="nav">
+        <ul>
+            <li><a href="">Biodata</a></li>
+            <li><a href="portofolio.html">Portofolio</a></li>
+        </ul>
+        </div>
+
         <h1>Tiara Dwi Meilinda Aisa</h1>
         <img src="abu.png" width ="100">
-        <p>Saya seorang mahasiswa Sistem Informasi di Universitas Jember yang tertarik dengan ilmu komputer. 
+        <p>Saya seorang mahasiswa prodi Sistem Informasi di Universitas Jember yang tertarik dengan ilmu komputer. 
             Saya merupakan individu yang memiliki antusias dan semangat tinggi.
             Saya senang belajar hal baru dan memiliki kemampuan komunikasi yang baik.</p>
         <h2><b>Keahlihan saya</b></h2>
@@ -41,9 +74,8 @@
             <li>email : tiaradwi013@gmail.com</li>
             <li>WA : 082316745108</li>
             <li><a href="https://www.linkedin.com/in/tiara-dwi-meilinda-aisa-89487a223/">Linkedin</a></li>
-            <li><a href="https://github.com/tiaradwimeilindaa/web-basic-seal/blob/html_element/tabel/portofolio.html">Portofolio</a></li>
+            <li><a href="https://github.com/tiaradwimeilindaa/web-basic-seal/blob/html_element/tabel/portofolio.html">GitHub Portofolio</a></li>
         </ul>
-
     </body>
 </html>
 
