--- a/tabel/portofolio.html
+++ b/tabel/portofolio.html
@@ -30,8 +30,12 @@
     caption{
         font-weight: bold;
     }
+    
   </style>
 <body>
+    <a href="index.html">Biodata</a>
+    <a href="">Portofolio</a>
+    
     <h1 style="text-align: center;">Form Portofolio</h1>
     <form>
         <p>Nama</p>
