--- a/tabel/index.html
+++ b/tabel/index.html
@@ -7,13 +7,13 @@
       height: 100%;
       font-family: Arial, Helvetica, sans-serif;
     }
-    h1{
+    .nav h1{
         color: rgb(0, 0, 0);
         font-family: Verdana;
         font-size: 250%;
     }    
-    img{
-        width: 180;
+    .nav img{
+        width: 200;
         height: 300;
     }
     
