--- a/tabel/index.html
+++ b/tabel/index.html
@@ -1,22 +1,6 @@
 <html>
     <title>Biodata</title>
     <style>
-        body {
-      background-color: #d7b3cb;
-      padding-top: 5px;
-      height: 100%;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-    .nav h1{
-        color: rgb(0, 0, 0);
-        font-family: Verdana;
-        font-size: 250%;
-    }    
-    .nav img{
-        width: 200;
-        height: 300;
-    }
-    
     .nav ul {
         list-style-type: none;
         margin: 0;
@@ -42,9 +26,26 @@
     }
     
     </style>
+    <style>
+        body {
+      background-color: #d7b3cb;
+      padding-top: 5px;
+      height: 100%;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    .nav h1{
+        color: rgb(0, 0, 0);
+        font-family: Verdana;
+        font-size: 250%;
+    }    
+    .nav img{
+        width: 200;
+        height: 300;
+    }
+    </style>
 
-    <body>
-        <div class="nav">
+<body>
+    <div class="nav">
         <ul>
             <li><a href="">Biodata</a></li>
             <li><a href="portofolio.html">Portofolio</a></li>
