--- a/tabel/index.html
+++ b/tabel/index.html
@@ -1,5 +1,10 @@
-<html>
-    <title>Biodata</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biodata</title>    
     <style>
     .nav ul {
         list-style-type: none;
@@ -26,22 +31,24 @@
     }
     
     </style>
+</head>
     <style>
-        body {
-      background-color: #d7b3cb;
-      padding-top: 5px;
-      height: 100%;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-    .nav h1{
-        color: rgb(0, 0, 0);
-        font-family: Verdana;
-        font-size: 250%;
-    }    
-    .nav img{
-        width: 200;
-        height: 300;
-    }
+        body 
+        {
+            background-color: #d7b3cb;
+            padding-top: 5px;
+            height: 100%;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        h1{
+            color: rgb(0, 0, 0);
+            font-family: Verdana;
+            font-size: 250%;
+        }    
+        img{
+            width: 200;
+            height: 300;
+        }
     </style>
 
 <body>
