--- a/tabel/portofolio.html
+++ b/tabel/portofolio.html
@@ -5,33 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio</title>
-</head>
-<style>
-    body {
-      background-color: #d7b3cb;
-      padding-top: 5px;
-      height: 100%;
-      font-family: Arial, Helvetica, sans-serif;
+    <style>
+    .nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0px;
+        overflow: hidden;
+        background-color: #333;
     }
-    h1{
-        color: rgb(0, 0, 0);
-        font-family: Verdana;
-        font-size: 200%;
+
+    .nav li {
+        float: left;
     }
-    table,tr,th,td{
-        border: 3px solid black;
-        border-radius: 8px;
-        padding: 5px;
+
+    .nav li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
     }
-    tabel{ 
-        border-collapse: collapse;
-        caption-side: top;
-    }
-    caption{
-        font-weight: bold;
+
+    .nav li a:hover {
+        background-color: #111;
     }
     
-  </style>
+    </style>
+</head>
+    <style>
+        body 
+        {
+            background-color: #d7b3cb;
+            padding-top: 5px;
+            height: 100%;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        h1{
+            color: rgb(0, 0, 0);
+            font-family: Verdana;
+            font-size: 200%;
+        }
+        table,tr,th,td{
+            border: 3px solid black;
+            border-radius: 8px;
+            padding: 5px;
+        }
+        caption{
+            font-weight: bold;
+        }
+    
+    </style>
+
 <body>
     <a href="index.html">Biodata</a>
     <a href="">Portofolio</a>
