--- a/tabel/portofolio.html
+++ b/tabel/portofolio.html
@@ -57,8 +57,12 @@
     </style>
 
 <body>
-    <a href="index.html">Biodata</a>
-    <a href="">Portofolio</a>
+    <div class="menu">
+        <ul>
+            <li><a href="index.html">Biodata</a></li>
+            <li><a href="">Portofolio</a></li>
+        </ul>
+    </div>
     
     <h1 style="text-align: center;">Form Portofolio</h1>
     <form>
