--- a/tabel/portofolio.html
+++ b/tabel/portofolio.html
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body>
-    <div class="menu">
+    <div class="nav">
         <ul>
             <li><a href="index.html">Biodata</a></li>
             <li><a href="">Portofolio</a></li>
