--- a/tabel/index.html
+++ b/tabel/index.html
@@ -44,7 +44,7 @@
             font-size: 250%;
         }    
         img{
-            width: 200;
+            width: 210;
             height: 300;
         }
     </style>
@@ -58,7 +58,7 @@
         </div>
 
         <h1>Tiara Dwi Meilinda Aisa</h1>
-        <img src="abu.png" width ="100" margin ="auto">
+        <img src="abu.png" width ="100">
         <p>Saya seorang mahasiswa prodi Sistem Informasi di Universitas Jember yang tertarik dengan ilmu komputer. 
             Saya merupakan individu yang memiliki antusias dan semangat tinggi.
             Saya senang belajar hal baru dan memiliki kemampuan komunikasi yang baik.</p>
